--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
 
       <div class="bio">
         <h3 class="text-secondary">
-          Computer Science and Engieering student <br>
+          Computer Science and Engineering student <br>
           Machine Learning enthusiast <br>
           Honest; lazy; Philanthrophist; and Dumb :)
         </h3>
