--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
       Web Developer, Programmer, Designer & Entrepreneur
     </h2>
     <div class="icons">
-      <a href="#!">
+      <a href="www.twitter.com/@NITINJA36181224">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://www.facebook.com/profile.php?id=100016162444575">
         <i class="fab fa-facebook fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://www.linkedin.com/in/nitinjaiswal2001">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://github.com/nitinjaiswalnj2001">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
