--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       Web Developer, Programmer, Designer & Entrepreneur
     </h2>
     <div class="icons">
-      <a href="www.twitter.com/@nitinja36181224">
+      <a href="www.twitter.com/@NITINJA36181224">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
       <a href="https://www.facebook.com/profile.php?id=100016162444575">
